--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 bevy = "0.14.2"
 bevy-inspector-egui = { version = "0.27.0", optional = true }
 bevy_pancam = "0.14.0"
+bevy_prototype_lyon = "0.12.0"
+geo = "0.28.0"
+linfa-clustering = "0.7.0"
 noise = "0.9.0"
 rand = "0.8.5"
 
