--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ bevy_fast_tilemap = { git = "https://github.com/Droggelbecher/bevy-fast-tilemap.
 bevy-inspector-egui = { version = "0.27.0", optional = true }
 noise = "0.9.0"
 rand = "0.8.5"
+serde = "1.0.213"
+toml = { version = "0.8.19", features = ["parse"] }
 
 [features]
 default = [
@@ -48,6 +50,7 @@ unused = "allow"
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
 opt-level = 1
+incremental = true
 
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
