--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = "1.0.213"
 toml = { version = "0.8.19", features = ["parse"] }
 
 [dev-dependencies]
+rstest = "0.23.0"
 tempfile = "3.13.0"
 
 [features]
