--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 bevy = "0.14.2"
 bevy_pancam = "0.14.0"
 bevy_fast_tilemap = { git = "https://github.com/Droggelbecher/bevy-fast-tilemap.git", branch = "master" }
-bevy-inspector-egui = { version = "0.27.0", optional = true }
+bevy-inspector-egui = { version = "0.27.0" }
 noise = "0.9.0"
 rand = "0.8.5"
 serde = "1.0.213"
@@ -26,7 +26,6 @@ dev = [
     # Improve compile times for dev builds by linking Bevy as a dynamic library.
     "bevy/dynamic_linking",
     "bevy/bevy_dev_tools",
-    "dep:bevy-inspector-egui",
 ]
 dev_native = [
     "dev",
