--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "worlds"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 [dependencies]
@@ -12,6 +12,9 @@ noise = "0.9.0"
 rand = "0.8.5"
 serde = "1.0.213"
 toml = { version = "0.8.19", features = ["parse"] }
+image = "0.25.4"
+profiling-procmacros = "1.0.16"
+tempfile = "3.13.0"
 
 [dev-dependencies]
 rstest = "0.23.0"
@@ -53,7 +56,6 @@ unused = "allow"
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
 opt-level = 1
-incremental = true
 
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
