--- a/assets/biomes/elevation.toml
+++ b/assets/biomes/elevation.toml
@@ -2,6 +2,7 @@ name = "Elevation"
 enabled = true
 
 [tiles]
+# The higher l-level the higher is altitude
 l16 = [211, 88, 31]
 l15 = [202, 102, 27]
 l14 = [195, 106, 26]
@@ -9,13 +10,13 @@ l13 = [210, 133, 55]
 l12 = [229, 159, 89]
 l11 = [252, 194, 128]
 l10 = [254, 227, 168]
-l9 = [224, 219, 177]
-l8 = [196, 216, 190]
-l7 = [158, 217, 204]
-l6 = [141, 216, 248]
-l5 = [112, 208, 245]
-l4 = [79, 205, 248]
-l3 = [39, 194, 245]
-l2 = [79, 171, 226]
-l1 = [83, 158, 216]
-l0 = [89, 127, 198]
+l09 = [224, 219, 177]
+l08 = [196, 216, 190]
+l07 = [158, 217, 204]
+l06 = [141, 216, 248]
+l05 = [112, 208, 245]
+l04 = [79, 205, 248]
+l03 = [39, 194, 245]
+l02 = [79, 171, 226]
+l01 = [83, 158, 216]
+l00 = [89, 127, 198]
