--- a/assets/biomes/temperature.toml
+++ b/assets/biomes/temperature.toml
@@ -2,20 +2,17 @@ name = "Temperature"
 enabled = true
 
 [tiles]
-l16 = [211, 88, 31]
-l15 = [202, 102, 27]
-l14 = [195, 106, 26]
-l13 = [210, 133, 55]
-l12 = [229, 159, 89]
-l11 = [252, 194, 128]
-l10 = [254, 227, 168]
-l09 = [224, 219, 177]
-l08 = [196, 216, 190]
-l07 = [158, 217, 204]
-l06 = [141, 216, 248]
-l05 = [112, 208, 245]
-l04 = [79, 205, 248]
-l03 = [39, 194, 245]
-l02 = [79, 171, 226]
-l01 = [83, 158, 216]
-l00 = [89, 127, 198]
+# The higher l-level the higher is temperature
+l12 = [122, 31, 30]
+l11 = [161, 42, 40]
+l10 = [255, 70, 65]
+l09 = [255, 114, 62]
+l08 = [254, 165, 63]
+l07 = [253, 211, 67]
+l06 = [254, 253, 65]
+l05 = [178, 255, 66]
+l04 = [63, 197, 254]
+l03 = [60, 144, 251]
+l02 = [62, 63, 252]
+l01 = [58, 58, 229]
+l00 = [125, 62, 255]
