--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ noise = "0.9.0"
 rand = "0.8.5"
 serde = "1.0.213"
 toml = { version = "0.8.19", features = ["parse"] }
-image = "0.25.4"
+image = { version = "0.25.4", default-features = false, features = ["rayon", "png"]}
 profiling-procmacros = "1.0.16"
 tempfile = "3.13.0"
 
