--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,7 +55,7 @@ jobs:
         uses: Leafwing-Studios/cargo-cache@v2
 
       - name: Run clippy lints
-        run: cargo clippy --workspace --all-targets --all-features -- --deny warnings
+        run: cargo clippy --workspace --all-targets --all-features
 
   # Check formatting.
   format:
