--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,18 @@ edition = "2021"
 [dependencies]
 bevy = "0.14.2"
 bevy_pancam = "0.14.0"
-bevy_fast_tilemap = { git = "https://github.com/Droggelbecher/bevy-fast-tilemap.git", branch = "master" }
 bevy-inspector-egui = { version = "0.27.0" }
 noise = "0.9.0"
 rand = "0.8.5"
 serde = "1.0.213"
 toml = { version = "0.8.19", features = ["parse"] }
-image = { version = "0.25.4", default-features = false, features = ["rayon", "png"]}
+image = { version = "0.25.4", default-features = false, features = [
+    "rayon",
+    "png",
+] }
 profiling-procmacros = "1.0.16"
 tempfile = "3.13.0"
+bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", branch = "main" }
 
 [dev-dependencies]
 rstest = "0.23.0"
@@ -60,10 +63,6 @@ opt-level = 1
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
-
-# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
-[profile.dev.package.wgpu-types]
-debug-assertions = false
 
 [profile.release]
 # Optimize with size in mind (also try "z", sometimes it is better).
